| Bug #14367 | Partitions: crash if utf8 column | ||
|---|---|---|---|
| Submitted: | 27 Oct 2005 3:02 | Modified: | 24 Mar 2006 7:28 |
| Reporter: | Peter Gulutzan | ||
| Status: | Closed | ||
| Category: | Server: Partition | Severity: | S3 (Non-critical) |
| Version: | 5.1.2-alpha-debug | OS: | Linux (SUSE 10.0) |
| Assigned to: | Sergey Gluhov | Target Version: | |
[27 Oct 2005 3:02]
Peter Gulutzan
[27 Oct 2005 3:39]
Jorge del Conde
I was albe to reproduce this using a recent 5.1bk clone
[27 Oct 2005 3:53]
Jorge del Conde
I was albe to reproduce this using a recent 5.1bk clone
[1 Dec 2005 2:21]
Patrick Galbraith
Looking at the trace, it crashes outside of partitioning on Query_arena::free_items @10859140: | | >query_cache_end_of_result T@10859140: | | <query_cache_end_of_result T@10859140: | | >st_select_lex_unit::cleanup T@10859140: | | | >st_select_lex::cleanup() T@10859140: | | | <st_select_lex::cleanup() T@10859140: | | <st_select_lex_unit::cleanup T@10859140: | | >_myfree T@10859140: | | | enter: ptr: 0x0 T@10859140: | | <_myfree T@10859140: | | >_myfree T@10859140: | | | enter: ptr: 0x0 T@10859140: | | <_myfree T@10859140: | | >Query_arena::free_items
[21 Feb 2006 9:18]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/2957
[6 Mar 2006 9:08]
Alexander Barkov
Looks ok to push.
[20 Mar 2006 14:38]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/3974
[20 Mar 2006 14:40]
Sergey Gluhov
Fixed in 5.1.8
[24 Mar 2006 7:28]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented fix in 5.1.8 changelog. Closed.
