Bug#14367 Partitions: crash if utf8 column   use part_info->item_free_list instead of thd->free_list during partition function parsing